--- a/Music Project/MainStoryboard.storyboard
+++ b/Music Project/MainStoryboard.storyboard
@@ -619,6 +619,6 @@
         <simulatedScreenMetrics key="destination" type="retina4"/>
     </simulatedMetricsContainer>
     <inferredMetricsTieBreakers>
-        <segue reference="ou1-ai-BPf"/>
+        <segue reference="2QN-L3-u5o"/>
     </inferredMetricsTieBreakers>
 </document>
